--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/preset-env": "^7.10.4",
     "babel-loader": "^8.1.0",
     "eslint": "^7.4.0",
+    "jest": "^26.1.0",
     "npm-run-all": "^4.1.5",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
@@ -21,6 +22,8 @@
   "scripts": {
     "build": "run-s lint webpack",
     "lint": "eslint ./bin/ ./lib/",
+    "test": "jest",
+    "tdd": "jest --watchAll",
     "webpack": "webpack"
   },
   "publishConfig": {
