--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "@koozaki/romaji-conv",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Convert romaji into hiragana",
   "keywords": [
     "romaji",
     "hiragana",
     "nihongo",
     "japanese",
-    "convert"
+    "convert",
+    "ローマ字",
+    "ひらがな"
   ],
   "homepage": "https://koozaki.com/romaji-conv/",
   "bugs": {
