--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,13 @@
 {
-    "env": {
-        "node": true,
-        "browser": true,
-        "commonjs": true,
-        "es2020": true
-    },
-    "extends": "eslint:recommended",
-    "parserOptions": {
-        "ecmaVersion": 11
-    },
-    "rules": {
-    }
+  "env": {
+    "node": true,
+    "browser": true,
+    "commonjs": true,
+    "es2020": true
+  },
+  "extends": "eslint:recommended",
+  "parserOptions": {
+    "ecmaVersion": 11
+  },
+  "rules": {}
 }
