--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@koozaki/romaji-conv",
-  "version": "2.0.17",
+  "version": "2.0.18",
   "description": "Convert romaji into kana",
   "keywords": [
     "romaji",
@@ -37,17 +37,18 @@
     "webpack": "webpack"
   },
   "dependencies": {
-    "commander": "^8.3.0"
+    "commander": "^9.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.12",
-    "@babel/preset-env": "^7.16.11",
-    "babel-loader": "^8.2.3",
-    "eslint": "^8.7.0",
-    "jest": "^27.4.7",
+    "@babel/core": "^7.18.9",
+    "@babel/preset-env": "^7.18.9",
+    "babel-loader": "^8.2.5",
+    "eslint": "^8.20.0",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
     "npm-run-all": "^4.1.5",
-    "webpack": "^5.67.0",
-    "webpack-cli": "^4.9.2"
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
