--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,7 @@
 {
   "semi": true,
   "singleQuote": true,
+  "quoteProps": "preserve",
   "jsxSingleQuote": true,
   "trailingComma": "none",
   "arrowParens": "avoid"
