--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
     "npm-run-all": "^4.1.5",
+    "prettier": "^3.0.0",
     "webpack": "^5.88.1",
     "webpack-cli": "^5.1.4"
   },
