--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@koozaki/romaji-conv",
-  "version": "2.0.28",
+  "version": "2.0.29",
   "description": "Convert romaji into kana",
   "keywords": [
     "romaji",
@@ -38,18 +38,19 @@
     "webpack": "webpack"
   },
   "dependencies": {
-    "commander": "^12.0.0"
+    "commander": "^12.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.4",
-    "@babel/preset-env": "^7.24.4",
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
     "babel-loader": "^9.1.3",
-    "eslint": "^8.57.0",
+    "eslint": "^9.6.0",
+    "globals": "^15.6.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^3.2.5",
-    "webpack": "^5.91.0",
+    "prettier": "^3.3.2",
+    "webpack": "^5.92.1",
     "webpack-cli": "^5.1.4"
   },
   "publishConfig": {
