Enhance npm publish workflow with build and test steps
Updated npm publish workflow to ensure npm is up-to-date and added build and test steps before publishing.

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -31,7 +31,14 @@ jobs:
           node-version: 20
           registry-url: https://registry.npmjs.org/
           scope: '@koozaki'
-      - run: npm publish --access public
+
+      # Ensure npm 11.5.1 or later is installed
+      - name: Update npm
+        run: npm install -g npm@latest
+      - run: npm ci
+      - run: npm run build --if-present
+      - run: npm test
+      - run: npm publish
 
   publish-gpr:
     needs: build
