--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -35,8 +35,10 @@ jobs:
       # Ensure npm 11.5.1 or later is installed
       - name: Update npm
         run: npm install -g npm@latest
-      - run: npm run build --if-present
-      - run: npm test
+      - run: npm install -g yarn@latest
+      - run: yarn
+      - run: yarn build
+      - run: yarn test
       - run: npm publish
 
   publish-gpr:
